# Myocardium-Segmentation

./: .gitignore  CMakeLists.txt  README.md
MyFirstModule/: MyFirstModule.py
extension/: CMakeLists.txt  Segmentation.py
extension/MyocardiumScarSegmentation/: CMakeLists.txt
extension/MyocardiumScarSegmentation/MyocardiumSegmentationModule/: CMakeLists.txt  MyocardiumSegmentationModule.py
extension/MyocardiumScarSegmentation/MyocardiumSegmentationModule/Resources/UI/: MyocardiumSegmentationModule.ui
extension/MyocardiumScarSegmentation/ScarSegmentation/: CMakeLists.txt  ScarSegmentation.py
extension/MyocardiumScarSegmentation/ScarSegmentation/Resources/UI/: ScarSegmentation.ui
extension/Resources/UI/: MyocardiumSegmentation.ui
myocardiumdivision/: division.py  division_io_constants.py  run_division.sh
myocardiumsegmentation/: RunTotalSegmentation.sh  cardiac_analysis.py  constants.py  division.py  division_io_constants.py  io_constants.py  io_utils.py  main.py  run_segmentation.sh  segmentation_constants.py  segmentation_utils.py  total_segmentation_constants.py  total_segmentator_pipeline.py  totalsegmentator_pipeline.py  visualization.py
myocardiumsegmentation/segmentations/: chambers-segmentation2.seg.nrrd  effusion-segmentation.seg.nrrd  effusion-segmentation2.seg.nrrd  segmentation.seg.nrrd  tissue-segmentation.seg.nrrd  tissue-segmentation2.seg.nrrd
python-script/: GlobalConstants.py  InitialSegmentation.py  MyocardiumSegmentation.py  RunMyocardiumSegmentation.sh  RunSegmentation.sh  RunTotalSegmentation.sh  SegmentationConstants.py  TotalSegmentation.py  main.py  testPython.py  testScript.sh  vtkCode.py
python-script/segmentations/: artery-segmentation2.seg.nrrd  effusion-segmentation2.seg.nrrd  tissue-segmentation.seg.nrrd  tissue-segmentation2.seg.nrrd
saved-segmentations/: artery-segmentation2.seg.nrrd  chambers-segmentation.seg.nrrd  effusion-segmentation.seg.nrrd  effusion-segmentation2.seg.nrrd  tissue-segmentation2.seg.nrrd
